ocp-multicluster/overlays/aws-ocp-cluster-4/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allowed-ingress-network-policy
spec:
  podSelector:
    matchLabels:
      deployment: backend
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: cluster-4-app
    - podSelector:
        matchLabels:
          deployment: frontend
    ports:
    - protocol: TCP
      port: 8080
